--- a/desarrolloSoftware.html
+++ b/desarrolloSoftware.html
@@ -18,18 +18,17 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@300;600&display=swap"
       rel="stylesheet"
     />
+    <!-- Fonts -->
 
     <!-- js -->
     <script src="js/changeInfo.js" defer></script>
-    <script src="js/toggleoverflow.js" defer></script>
 
-    <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body id="nav">
-    <nav class="blockNav bg-green">
+  <body>
+    <nav class="blockNav bg-green" id="nav">
       <div class="container blockNav__box">
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
@@ -80,7 +79,7 @@
           <a href="#nav" class="hamburguer__open">
             <img src="images/nav/menu.svg" alt="" />
           </a>
-          <a href="#" class="hamburguer__close"
+          <a href="#closenav" class="hamburguer__close"
             ><img src="images/nav/close.svg" alt=""
           /></a>
         </div>
