--- a/desarrolloSoftware.html
+++ b/desarrolloSoftware.html
@@ -86,7 +86,7 @@
       </div>
     </nav>
 
-    <header class="bg-multicolor pY-5">
+    <header class="header bg-multicolor">
       <div class="container">
         <div
           class="bg-white d-flex flex-direction-column row-landscape align-items-center flexContainer__box--radius-big gap-5 mT-2 pY-5 pX-5"
