--- a/funnel.html
+++ b/funnel.html
@@ -375,7 +375,7 @@
 
       <a
         href="#"
-        class="btn flexContainer__box--radius-big bg-blue-green c-white fs-md pX-2 pY-2 mT-5"
+        class="btn flexContainer__box--radius-big btn--multicolor c-white fs-md pX-2 pY-2 mT-5"
       >
         Empieza tu funnel hoy mismo
       </a>
