servicio attached whtn click added

--- a/funnel.html
+++ b/funnel.html
@@ -19,6 +19,9 @@
       rel="stylesheet"
     />
 
+    <!-- js -->
+    <script src="js/servicio.js" defer></script>
+
     <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -30,7 +33,7 @@
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
           <li class="dropdown">
-            <a href="#" class="servicio">servicios</a>
+            <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
                 <a href="blockchainv2.html">Tokenización</a>
