--- a/home.html
+++ b/home.html
@@ -20,9 +20,10 @@
     />
     <!-- Fonts -->
 
-    <!-- script -->
-    <script src="js/toggleoverflow.js" defer></script>
+    <!-- js -->
+    <script src="js/servicio.js" defer></script>
 
+    <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
@@ -33,7 +34,7 @@
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
           <li class="dropdown">
-            <a href="#" class="servicio">servicios</a>
+            <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
                 <a href="blockchainv2.html">Tokenización</a>
