--- a/socialMedia.html
+++ b/socialMedia.html
@@ -19,6 +19,9 @@
       rel="stylesheet"
     />
 
+    <!-- js -->
+    <script src="js/servicio.js" defer></script>
+    
     <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -30,7 +33,7 @@
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
           <li class="dropdown">
-            <a href="#" class="servicio">servicios</a>
+            <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
                 <a href="blockchainv2.html">Tokenización</a>
@@ -84,21 +87,23 @@
     </nav>
 
     <header class="header bg-multicolor">
-      <div class="container d-flex align-items-center flex-direction-column row-medium gap-5">
-        <div class="flex-1 fs-2 line-height-md">
-          <h3 class="c-main">Crea un vínculo único con tus clientes</h3>
-          <h2 class="c-secondary">
+      <div
+        class="container d-flex align-items-center flex-direction-column row-medium gap-5"
+      >
+        <div class="flex-1 fs-2">
+          <h3 class="c-main-blue fw-300 fs-3">Crea un vínculo único con tus clientes</h3>
+          <h2 class="line-height-md mT-1">
             Convertimos tus redes sociales en una extensión de tu negocio
           </h2>
 
-          <p class="mT-3">
+          <p class="line-height-md mT-1">
             Consigue atraer y retener la atención de tus clientes para que te
             tengan siempre presente
           </p>
 
           <a
             href="#"
-            class="btn flexContainer__box--radius-big bg-blue-main c-white text-transform-uppercase fs-2 pY-1 pX-2 mT-3"
+            class="btn flexContainer__box--radius bg-blue-dark c-white text-transform-uppercase fs-2 pY-1 pX-2 mT-3"
           >
             empieza hoy mismo
           </a>
@@ -418,7 +423,7 @@
               <p
                 class="d-inline-block bg-green c-white flexContainer__box--radius-big fs-2 pY-1 pX-2 mT-1"
               >
-                seleccion
+                seleccionar
               </p>
             </div>
 
@@ -495,7 +500,7 @@
               <p
                 class="d-inline-block bg-white flexContainer__box--radius-big fs-2 pY-1 pX-2 mT-1"
               >
-                seleccion
+                seleccionar
               </p>
             </div>
 
