--- a/tienda.html
+++ b/tienda.html
@@ -19,6 +19,9 @@
       rel="stylesheet"
     />
 
+    <!-- js -->
+    <script src="js/servicio.js" defer></script>
+
     <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -30,7 +33,7 @@
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
           <li class="dropdown">
-            <a href="#" class="servicio">servicios</a>
+            <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
                 <a href="blockchainv2.html">Tokenización</a>
@@ -456,7 +459,9 @@
           </h2>
         </div>
 
-        <div class="d-flex flex-direction-column row-landscape align-items-start gap-5 mT-9">
+        <div
+          class="d-flex flex-direction-column row-landscape align-items-start gap-5 mT-9"
+        >
           <div
             class="flex-1 flexContainer__box--radius bg-green-dark pY-5 pX-2"
           >
@@ -767,7 +772,11 @@
             class="flex-1 flexContainer__box--radius bg-light-blue c-dark-blue pY-5 pX-2"
           >
             <div class="text-center">
-              <img src="images/tienda/titan.png" alt="" class="tienda__logo tienda__logo--coloso" />
+              <img
+                src="images/tienda/titan.png"
+                alt=""
+                class="tienda__logo tienda__logo--coloso"
+              />
 
               <h2 class="text-transform-uppercase fs-3 mT-2">paquete titán</h2>
 
