--- a/desarrolloSoftware.html
+++ b/desarrolloSoftware.html
@@ -22,7 +22,9 @@
 
     <!-- js -->
     <script src="js/changeInfo.js" defer></script>
+    <script src="js/servicio.js" defer></script>
 
+    <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
@@ -33,7 +35,7 @@
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
           <li class="dropdown">
-            <a href="#" class="servicio">servicios</a>
+            <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
                 <a href="blockchainv2.html">Tokenización</a>
