--- a/identidad.html
+++ b/identidad.html
@@ -19,6 +19,9 @@
       rel="stylesheet"
     />
 
+    <!-- js -->
+    <script src="js/servicio.js" defer></script>
+
     <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -30,7 +33,7 @@
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
           <li class="dropdown">
-            <a href="#" class="servicio">servicios</a>
+            <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
                 <a href="blockchainv2.html">Tokenización</a>
@@ -526,7 +529,9 @@
             </a>
           </div>
 
-          <div class="flex-1 flexContainer__box--radius bg-green-dark c-white pY-5 pX-2">
+          <div
+            class="flex-1 flexContainer__box--radius bg-green-dark c-white pY-5 pX-2"
+          >
             <div class="text-center">
               <h2 class="text-transform-uppercase fs-3">
                 plan emprenya brading pro
