--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@300;600&display=swap"
       rel="stylesheet"
     />
+    <!-- js -->
+    <script src="js/servicio.js" defer></script>
+    
     <!-- Fonts -->
-
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
@@ -30,7 +32,7 @@
         <img src="images/logo/b_lanzaya.png" alt="" class="blockNav__logo" />
         <ul>
           <li class="dropdown">
-            <a href="#" class="servicio">servicios</a>
+            <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
                 <a href="blockchainv2.html">Tokenización</a>
