desarrollo web and some changes

--- a/desarrolloSoftware.html
+++ b/desarrolloSoftware.html
@@ -91,14 +91,14 @@
     <header class="header bg-multicolor">
       <div class="container">
         <div
-          class="bg-white d-flex flex-direction-column row-landscape align-items-center flexContainer__box--radius-big gap-5 mT-2 pY-5 pX-5"
+          class="d-flex flex-direction-column row-landscape align-items-center gap-5 mT-2"
         >
-          <div class="columns__box">
+          <div class="columns__box text-center">
             <div class="fs-2 columns__content">
-              <h2 class="c-main fw-300 fs-md">
+              <h2 class="fw-300 fs-md">
                 Olvídate de adaptarte a un software genérico
               </h2>
-              <h1 class="c-main">
+              <h1>
                 Desarrollamos un software a medida para tu negocio
               </h1>
 
@@ -109,7 +109,7 @@
 
               <a
                 href="#"
-                class="btn btn--radiusBig btn--box-shadow bg-green-dark pX-3 pY-1 c-white fs-md fw-600 mT-5"
+                class="btn flexContainer__box--radius bg-blue-secondary c-white text-transform-uppercase fs-2 pY-1 pX-2 mT-3"
               >
                 Necesito un software a medida
               </a>
@@ -333,12 +333,12 @@
 
         <div class="d-flex flex-direction-column row-medium gap-5 mT-5">
           <div class="flex-1 flexContainer__box--radius bg-white pY-5 pX-5">
-            <h2 class="c-main-blue fs-md fw-300">
+            <h2 class="text-center 12c-main-blue fs-md fw-300 mT-3">
               Los softwares genéricos están pensados para todos. Por eso es muy
               frecuente que:
             </h2>
 
-            <ul class="mT-3">
+            <ul class="mT-9">
               <li class="d-flex gap-3">
                 <img
                   src="images/desarrolloSoftware/iconos/x.png"
