--- a/funnel.html
+++ b/funnel.html
@@ -86,18 +86,18 @@
       </div>
     </nav>
 
-    <header class="bg-multicolor pY-5">
+    <header class="header bg-multicolor">
       <div class="container">
         <div
-          class="bg-white d-flex flex-direction-column row-landscape align-items-center flexContainer__box--radius-big gap-5 mT-2 pY-5 pX-5"
+          class="d-flex flex-direction-column row-landscape align-items-center gap-5 mT-2"
         >
-          <div class="columns__box">
+          <div class="columns__box text-center">
             <div class="fs-2 columns__content">
-              <h1 class="c-main fw-300 text-transform-uppercase">
-                Diseñamos <span class="fw-bold">un funnel</span> para tu negocio
-                <span class="fw-bold"
-                  >que generará leads en piloto automático</span
-                >
+              <h1 class="fw-300">
+                Diseñamos un funnel para tu negocio
+                <span class="fw-bold">
+                  que generará leads en piloto automático
+                </span>
               </h1>
 
               <h3 class="fw-300 mT-5">
@@ -107,7 +107,7 @@
 
               <a
                 href="#"
-                class="btn btn--radiusBig btn--box-shadow bg-green-dark pX-3 pY-1 c-white fs-md fw-600 mT-5"
+                class="btn btn--radiusBig bg-blue-secondary pX-3 pY-1 c-white fs-md fw-600 mT-5"
               >
                 Empieza a funnelizar hoy mismo
               </a>
@@ -378,7 +378,7 @@
 
       <a
         href="#"
-        class="btn flexContainer__box--radius-big btn--multicolor c-white fs-md pX-2 pY-2 mT-5"
+        class="btn flexContainer__box--radius btn--multicolor c-white fs-md pX-2 pY-1 mT-5"
       >
         Empieza tu funnel hoy mismo
       </a>
